# langgraph-codeact-mcp-example

./: .env.example  .gitignore  README.md  e2b.Dockerfile  e2b.toml  langgraph.json  pyproject.toml  server.py
agent/: agent.py
agent/common/: config.py  llm_guard.py  llms.py
agent/virtual_assistant/: convert_fastmcp_tool_to_langchain_tool.py  create_default_prompt.py  create_e2b_eval_fn.py  create_pyodide_eval_fn.py  create_reflection_prompt.py  tool_selection.py  virtual_assistant_graph.py
