[tool.poetry]
name = "langgraph-codeact-mcp-example"
version = "0.1.0"
description = "A powerful, cost-efficient virtual assistant built with LangGraph, LangChain, and Model Context Protocol (MCP)"
authors = ["Nikita Sviridenko <nikita.sviridenko@voypost.com>"]
packages = [
    { include = "agent" },
]

[tool.poetry.dependencies]
python = ">=3.11.5,<3.12"
python-dotenv = "^1.1.0"
langgraph = "^0.3.34"
langchain-core = "^0.3.56"
langgraph-cli = {extras = ["inmem"], version = "^0.2.7"}
langgraph-sdk = "^0.1.63"
langchain-anthropic = "^0.3.12"
jinja2 = "*"
json-repair = "*"
aiofiles = "*"
fastmcp = "^2.3.4"
langchain-sandbox = "^0.0.4"
langchain-openai = "^0.3.17"
openai = "^1.78.1"
langgraph-codeact = {git = "https://github.com/n-sviridenko/langgraph-codeact.git", rev = "reflection-prompt"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 